--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 ---
 book_repo: pivotal-cf/docs-book-telmetry
 layout_repo: pivotal-cf/docs-layout-repo
-layout_repo_ref: 'master'
+layout_repo_ref: 'edge'
 
 broken_link_exclusions: iefix|arrowhead
 repo_link_enabled: true
@@ -15,17 +15,17 @@ feedback_enabled: true
 sections:
 - repository:
     name: pivotal-cf/docs-telemetry
-    ref: '0.5'
-  directory: telemetry/0-5
-  subnav_template: telemetry_0_5.erb
+    ref: '1.0'
+  directory: telemetry/1-0
+  subnav_template: telemetry_1_0.erb
   product_info:
     use_local_header: true
     latest_stable_version: '0.5'
     local_header_img: /images/cloud_rings.png
     local_header_title: Pivotal Telemetry Collector
-    search_placeholder: Search Telemetry Collector 0.5
-    url_prefix: telemetry/0-5
-    local_product_version: 0.5
+    search_placeholder: Search Telemetry Collector 1.0
+    url_prefix: telemetry/1-0
+    local_product_version: 1.0
     local_header_links: []
     local_header_version_list:
       
