--- a/config.yml
+++ b/config.yml
@@ -28,4 +28,6 @@ sections:
     local_product_version: 1.1
     local_header_links: []
     local_header_version_list:
+      - url_prefix: https://docs.pivotal.io/telemetry/1-0
+        display_name: v1.1
       
